Further fixed the spacing issues.

--- a/themes/bmosior.com/css/overrides.css
+++ b/themes/bmosior.com/css/overrides.css
@@ -9,7 +9,7 @@ canvas {
 
 .content-head {
 	margin-top: 0em;
-	margin-bottom: 2em;
+	margin-bottom: 4em;
 }
 
 .content-wrapper {
